--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '2'
 services:
   gitlab:
     image: gitlab/gitlab-ce:latest
+    hostname: gitlab.example.com
     ports:
     - "22:22"
     - "80:80"
